# english-anki-deck-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: ci-cd.yml
anki_csv/: target_1900_6th.txt
backend/: pyproject.toml
backend/tests/: test_vocabdb.py
backend/vocabdb/: api.py  cli.py  importers.py
data/grammar_patterns/: grammar_taxonomy.yaml
data/templates/: sample_template.yaml
data/vocabulary/: collocations.yaml  irregular_verbs.yaml  nouns.yaml  prepositions.yaml
docs/.ai/: repo.profile.json
docs/L0_concept/: concept.md  policy.md
docs/L1_project/: project_overview.md  repository_structure.md
docs/L2_development/: consistency_checks.md  operation_model.md  test.md
docs/L3_implementation/: database.md  specification_summary.md
docs/specification/: L0_philosophy.md  L1_taxonomy.md  L2_card_schema.md  L3_generation_pipeline.md
frontend/review/: app.js  index.html  styles.css
scripts/: build_deck.py
server/nginx/: dict-english.conf  dict-english.conf.example
server/systemd/: dict-english.env.example  dict-english.service  dict-english.service.example
tests/: test_vocabdb.py
vocabdb/: __init__.py  cli.py  db.py  exporters.py  importers.py  validation.py
web/review/: app.js  index.html  styles.css
